adcws/mysqlws/kube/services/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "32000"
      port: 32000
      targetPort: 3306
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
